Project

General

Profile

Actions

Bug #47551

closed

Some structs aren't bound to mempools properly

Added by Igor Fedotov over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, octopus, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

bluestore_shared_blob_t is dynamically allocated but isn't configured for mempool
bluestore_blob_use_tracker_t might dynamically allocate data from allocate() method which aren't tracked by mempools either.


Related issues 3 (0 open3 closed)

Copied to bluestore - Backport #47668: octopus: Some structs aren't bound to mempools properlyResolvedIgor FedotovActions
Copied to bluestore - Backport #47669: nautilus: Some structs aren't bound to mempools properlyResolvedIgor FedotovActions
Copied to bluestore - Backport #47670: mimic: Some structs aren't bound to mempools properlyRejectedActions
Actions #1

Updated by Igor Fedotov over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Igor Fedotov
Actions #2

Updated by Igor Fedotov over 3 years ago

  • Pull request ID set to 37263
Actions #3

Updated by Igor Fedotov over 3 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Igor Fedotov over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47668: octopus: Some structs aren't bound to mempools properly added
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47669: nautilus: Some structs aren't bound to mempools properly added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47670: mimic: Some structs aren't bound to mempools properly added
Actions #8

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF