os/bluestore: add missing structs to bluestore_cache_other mempool

Fixes: https://tracker.ceph.com/issues/47551
Signed-off-by: Igor Fedotov <ifedotov@suse.com>